# vibe-coding-benchmark-public

./: .gitignore  CNAME  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  docker-compose.prod.yaml  docker-compose.yaml  package-lock.json  package.json  vercel.json
.claude/commands/agentic-dev/: apply.md  done.md  proposal.md
.clinerules/: 02-agents.md
.cursor/rules/: agents.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  new-task.yml
.github/workflows/: ci.yaml  pages.yaml  vercel-auto-pr.yml  vercel-deploy.yaml  vercel-pr-command.yaml  vercel-project-init.yaml
.windsurf/rules/: rules.md
docs/: TASK_EXPANSION_PLAN.md  THESIS.md
docs/categories/: code-evolution.md
openspec/changes/init-vibecodingbench/: design.md  proposal.md  tasks.md
scripts/: deploy.sh
tasks/ai-integration/advanced/context-management/: PROMPT.md  task.yaml
tasks/ai-integration/advanced/evaluation-framework/: PROMPT.md  task.yaml
tasks/ai-integration/advanced/guardrails-safety/: PROMPT.md  task.yaml
tasks/ai-integration/advanced/memory-system/: PROMPT.md  task.yaml
templates/fastapi-postgres/: docker-compose.yaml  pyproject.toml
templates/fastapi-postgres/src/: config.py  database.py  main.py  models.py  schemas.py
templates/go-fiber/: docker-compose.yaml  go.mod  go.sum  main.go
templates/nextjs-supabase/: .env.example  docker-compose.yaml
templates/rust-axum/: Cargo.toml  docker-compose.yaml
templates/rust-axum/migrations/: 20240101000000_init.sql
templates/rust-axum/src/: main.rs
(+370 files in other folders)
